# samo-manager

./: .gitignore  Anchor.toml  Cargo.toml  README.md
app/: package-lock.json  package.json
app/public/: index.html
app/src/: App.css  App.js  Footer.css  Footer.js  Header.css  Header.js  Helpers.js  idl.json  index.css  index.js
app/src/components/: AcceptVoucher.css  AcceptVoucher.js  CreateVoucher.css  CreateVoucher.js  Home.js  ListVouchers.css  ListVouchers.js  SendVoucher.css  SendVoucher.js  WalletAdaptor.css  WelcomePartyInfo.js
app/src/components/subcomponents/: WelcomePartyInfo.css  WelcomePartyInfo.js
app/src/idl/: samo_manager.json
programs/samo-manager/: Cargo.toml
programs/samo-manager/src/: lib.rs
tests/: samo-manager.js
