[package]
name = "samo-manager"
version = "0.1.0"
description = "Samo Manager"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "samo_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.19.0"
anchor-spl = {version = "0.19.0"}
spl-token = {version = "3.3.0", features = ["no-entrypoint"]}
